@@ -32,8 +32,6 @@ static const char *const status_usage[] =
     "\t-v\tVerbose format; includes tag information for the file\n",
     "\t-l\tProcess this directory only (not recursive).\n",
     "\t-R\tProcess directories recursively.\n",
-    "\t-q\tBe somewhat quiet.\n",
-    "\t-Q\tDo not print empty sticky parts.\n",
     NULL
 };
 
@@ -49,7 +47,7 @@ status (argc, argv)
 	usage (status_usage);
 
     optind = 1;
-    while ((c = getopt (argc, argv, "vlRqQ")) != -1)
+    while ((c = getopt (argc, argv, "vlR")) != -1)
     {
 	switch (c)
 	{
@@ -61,12 +59,6 @@ status (argc, argv)
 		break;
 	    case 'R':
 		local = 0;
-		break;
-	    case 'q':
-		quiet = TRUE;
-		break;
-	    case 'Q':
-		really_quiet = TRUE;
 		break;
 	    case '?':
 	    default:
